--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="application/javascript" src="/snarkjs.min.js"></script> 
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
